# Polyphonical-musical-synthesizer

./: README.md
P5/: meson.build
P5/src/: meson.build
P5/src/effects/: clipping.cpp  clipping.h  effect.cpp  tremolo.cpp
P5/src/instruments/: instrument.cpp  instrument_dumb.cpp  instrument_dumb.h  instrument_fm.cpp  instrument_fm.h  instrument_fm_vibrato.cpp  instrument_fm_vibrato.h  instrument_sampler.cpp  instrument_sampler.h  instrument_sin.cpp  instrument_sin.h
P5/src/midi2scores/: meson.build  midi2sco.py
P5/src/synth/: multinote_instr.h
